front : recipe card : fix title overflow

--- a/src/sass/components/_RecipeCard.scss
+++ b/src/sass/components/_RecipeCard.scss
@@ -20,10 +20,13 @@
     display: flex;
     flex-direction: column;
     padding: 0.5rem;
+    overflow: hidden;
   }
 
   h5 {
     overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     font-weight: bolder;
     font-size: 1.1rem;
     @media screen and (min-width: v.$bp1-min) {
@@ -42,7 +45,7 @@
 
 .recipe-image-container {
   display: flex;
-  width: 40%;
+  // width: 40%;
   max-height: 100px;
   max-width: 100px;
 }
